--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,18 @@
-# Hexo Configuration
-## Docs: https://hexo.io/docs/configuration.html
-## Source: https://github.com/hexojs/hexo/
-
-# Site
-title: Hexo
-subtitle:
-description:
+## 站点设置
+title: Mica的BLOG
+subtitle: 成為一個厲害得普通人
+description: 小人物,码农
 keywords:
-author: John Doe
-language:
+author: Mica Ma
+language: zh-Hans
 timezone:
 
-# URL
+#主题设置
+theme: next
+
+# 博客地址
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://sun-xyu.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -28,7 +27,7 @@ code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
-# Writing
+# 写作文章设置
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
@@ -50,32 +49,53 @@ highlight:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 5
   order_by: -date
   
 # Category & Tag
 default_category: uncategorized
 category_map:
-tag_map:
+tag_map: 
 
-# Date / Time format
-## Hexo uses Moment.js to parse and display date
-## You can customize the date format as defined in
-## http://momentjs.com/docs/#/displaying/format/
+# 日期格式/时间格式
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 
-# Pagination
+# 分页设置
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
 
-# Extensions
-## Plugins: https://hexo.io/plugins/
-## Themes: https://hexo.io/themes/
-theme: landscape
+#RSS订阅是设置
+plugin: hexo-generator-feed
+#Feed Atom
+feed:
+type: atom
+path: atom.xml
+limit: 20
 
-# Deployment
+
+# 发布部署地址设置
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:Mica-Ma/blog.git
+  branch: next
+
+# 博客搜索功能配置
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
+
+# 文章推荐功能,需要安装插件
+recommended_posts:
+  server: https://api.truelaurel.com #后端推荐服务器地址
+  timeoutInMillis: 10000 #服务时长，超过此时长，则使用离线推荐模式
+  internalLinks: 3 #内部文章数量
+  externalLinks: 1 #外部文章数量
+  fixedNumber: false
+  autoDisplay: false #自动在文章底部显示推荐文章
+  excludePattern: []
+  titleHtml: <h1>推荐文章</h1> #自定义标题
